<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.zfoo</groupId>
    <artifactId>util</artifactId>
    <version>2.0</version>

    <packaging>jar</packaging>


    <properties>
        <!-- 本项目的其它module版本号 -->
        <zfoo.event.version>2.0</zfoo.event.version>
        <zfoo.hotswap.version>2.0</zfoo.hotswap.version>
        <zfoo.net.version>2.0</zfoo.net.version>
        <zfoo.orm.version>2.0</zfoo.orm.version>
        <zfoo.scheduler.version>2.0</zfoo.scheduler.version>
        <zfoo.storage.version>2.0</zfoo.storage.version>
        <zfoo.util.version>2.0</zfoo.util.version>
        <zfoo.zplugin.version>2.0</zfoo.zplugin.version>

        <!-- 核心spring框架 -->
        <spring.version>5.1.5.RELEASE</spring.version>

        <!-- 工具包 -->
        <commons-codec.version>1.12</commons-codec.version>
        <commons-dbcp.version>2.6.0</commons-dbcp.version>
        <commons-io.version>2.6</commons-io.version>
        <commons-collections.version>3.2.2</commons-collections.version>
        <commons-lang.version>3.8.1</commons-lang.version>
        <commons-fileupload.version>1.4</commons-fileupload.version>
        <google.guava.version>27.0.1-jre</google.guava.version>

        <!-- json和xml解析包 -->
        <jackson.version>2.9.8</jackson.version>
        <!-- office文档解析包 -->
        <poi.version>4.0.1</poi.version>
        <!-- 字节码增强 -->
        <javassist.version>3.24.1-GA</javassist.version>

        <!-- 异步http -->
        <async-http-client.version>2.7.0</async-http-client.version>
        <jstl.version>1.2</jstl.version>
        <servlet-api.version>4.0.1</servlet-api.version>

        <!-- 网络通讯框架 -->
        <netty.version>4.1.33.Final</netty.version>

        <!-- 分布式zookeeper核心依赖包 -->
        <zookeeper.version>3.4.13</zookeeper.version>
        <curator-framework.version>4.1.0</curator-framework.version>
        <curator-recipes.version>4.1.0</curator-recipes.version>

        <!-- 数据库和缓存 -->
        <mongo-java-driver.version>3.10.1</mongo-java-driver.version>
        <jedis.version>3.0.1</jedis.version>

        <mysql.version>8.0.15</mysql.version>
        <hibernate.version>5.4.1.Final</hibernate.version>



        <log4j2.version>2.11.2</log4j2.version>

        <junit.version>4.12</junit.version>

        <!-- java版本和文件编码 -->
        <java.version>11</java.version>
        <file.encoding>UTF-8</file.encoding>

        <!-- maven核心插件 -->
        <maven-clean-plugin.version>3.1.0</maven-clean-plugin.version>
        <maven-compiler-plugin.version>3.8.0</maven-compiler-plugin.version>
        <maven-resources-plugin.version>3.1.0</maven-resources-plugin.version>
        <maven-surefire-plugin.version>3.0.0-M3</maven-surefire-plugin.version>
        <maven-shade-plugin.version>3.2.1</maven-shade-plugin.version>

        <!-- maven自定义plugin插件 -->
        <maven-plugin-api.version>3.6.0</maven-plugin-api.version>
        <maven-plugin-annotations.version>3.6.0</maven-plugin-annotations.version>

        <!-- site中project-info信息输出插件和javadoc文档输出插件 -->
        <maven-site-plugin.version>3.7.1</maven-site-plugin.version>
        <maven-project-info-reports-plugin.version>3.0.0</maven-project-info-reports-plugin.version>
        <maven-javadoc-plugin.version>3.0.1</maven-javadoc-plugin.version>
        <!-- site中project-info和javadoc输出格式配置 -->
        <dependency.locations.enabled>false</dependency.locations.enabled>
        <project.build.sourceEncoding>${file.encoding}</project.build.sourceEncoding>
        <project.reporting.outputEncoding>${file.encoding}</project.reporting.outputEncoding>
    </properties>

    <dependencies>
        <!-- Json库 -->
        <dependency>
            <groupId>com.fasterxml.jackson.core</groupId>
            <artifactId>jackson-core</artifactId>
            <version>${jackson.version}</version>
        </dependency>
        <dependency>
            <groupId>com.fasterxml.jackson.core</groupId>
            <artifactId>jackson-databind</artifactId>
            <version>${jackson.version}</version>
        </dependency>
        <!-- XML库 -->
        <dependency>
            <groupId>com.fasterxml.jackson.dataformat</groupId>
            <artifactId>jackson-dataformat-xml</artifactId>
            <version>${jackson.version}</version>
        </dependency>

        <!-- 依赖的Spring模块类库 -->
        <dependency>
            <groupId>org.springframework</groupId>
            <artifactId>spring-context</artifactId>
            <version>${spring.version}</version>
        </dependency>

        <!-- Spring动态表达式语言SpEL -->
        <dependency>
            <groupId>org.springframework</groupId>
            <artifactId>spring-expression</artifactId>
            <version>${spring.version}</version>
            <exclusions>
                <exclusion>
                    <groupId>commons-logging</groupId>
                    <artifactId>commons-logging-api</artifactId>
                </exclusion>
            </exclusions>
        </dependency>

        <!--log4j2核心包-->
        <dependency>
            <groupId>org.apache.logging.log4j</groupId>
            <artifactId>log4j-api</artifactId>
            <version>${log4j2.version}</version>
        </dependency>
        <dependency>
            <groupId>org.apache.logging.log4j</groupId>
            <artifactId>log4j-core</artifactId>
            <version>${log4j2.version}</version>
        </dependency>
        <!--用于Log4j2和slf4j保持桥接-->
        <dependency>
            <groupId>org.apache.logging.log4j</groupId>
            <artifactId>log4j-slf4j-impl</artifactId>
            <version>${log4j2.version}</version>
        </dependency>
        <!-- Web项目需添加 -->
        <!--<dependency>-->
        <!--<groupId>org.apache.logging.log4j</groupId>-->
        <!--<artifactId>log4j-web</artifactId>-->
        <!--<version>${log4j2.version}</version>-->
        <!--</dependency>-->

        <!-- 依赖的测试库 -->
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>${junit.version}</version>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>org.javassist</groupId>
            <artifactId>javassist</artifactId>
            <version>${javassist.version}</version>
        </dependency>
    </dependencies>

    <build>
        <sourceDirectory>src/main/java</sourceDirectory>
        <testSourceDirectory>src/test/java</testSourceDirectory>

        <plugins>

            <!-- 清理插件 -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-clean-plugin</artifactId>
                <version>${maven-clean-plugin.version}</version>
            </plugin>

            <!-- 编译插件 -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>${maven-compiler-plugin.version}</version>
                <configuration>
                    <source>${java.version}</source>
                    <target>${java.version}</target>
                    <encoding>${file.encoding}</encoding>
                </configuration>
            </plugin>


            <!-- resource资源管理插件 -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-resources-plugin</artifactId>
                <version>${maven-resources-plugin.version}</version>
                <executions>
                    <execution>
                        <id>copy-resources</id>
                        <phase>package</phase>
                        <goals>
                            <goal>copy-resources</goal>
                        </goals>
                        <configuration>
                            <encoding>${file.encoding}</encoding>
                            <outputDirectory>${project.build.directory}/resource</outputDirectory>
                            <resources>
                                <resource>
                                    <directory>src/main/resources/</directory>
                                    <filtering>false</filtering>
                                </resource>
                            </resources>
                        </configuration>
                    </execution>
                </executions>
            </plugin>


            <!-- 测试插件 -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>${maven-surefire-plugin.version}</version>
                <configuration>
                    <forkMode>once</forkMode>
                    <threadCount>10</threadCount>
                    <argLine>-Dfile.encoding=${file.encoding}</argLine>
                </configuration>
            </plugin>


            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-site-plugin</artifactId>
                <version>${maven-site-plugin.version}</version>
            </plugin>
        </plugins>
    </build>


    <!-- 用于生成javadoc文档，测试报告等等 -->
    <reporting>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-project-info-reports-plugin</artifactId>
                <version>${maven-project-info-reports-plugin.version}</version>
            </plugin>

            <!--必须设置环境变量：JAVA_TOOL_OPTIONS: -Dfile.encoding=UTF-8 -Dfile.decoding=UTF-8-->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-javadoc-plugin</artifactId>
                <version>${maven-javadoc-plugin.version}</version>
                <configuration>
                    <encoding>${file.encoding}</encoding>
                    <docencoding>${file.encoding}</docencoding>
                    <charset>${file.encoding}</charset>
                </configuration>
            </plugin>
        </plugins>
    </reporting>
</project>
